# shortlink

./: .code-workspace  .codecov.yml  .coveralls.yml  .cursorrules  .deepsource.toml  .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .mergify.yml  .pre-commit-config.yaml  .sops.yaml  .travis.yml  .whitesource  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dangerfile  Dockerfile  FLIGHT_RECORDER_IMPLEMENTATION.md  GOVERNANCE.md  JSON_V2_MIGRATION.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SYNCTEST_EXAMPLES.md  Trace-1d16e7-2025-12-02 21_46_29.json  Trace-451567-2025-11-27 21_29_57.json  WORKSPACE  (+26 more)
boundaries/billing/currency/: .env.dev  .gitignore  Cargo.toml  Makefile  README.md
boundaries/billing/currency/docs/ADR/decisions/: 0001-init-project.md  0002-requirements.md  0003-c4-model.md  0004-api-design.md  0005-handling-divergence-in-exchange-rates-between-providers.md  0006-project-layout.md
boundaries/billing/currency/docs/api/: openapi.yaml
boundaries/billing/currency/ops/Makefile/: dev.mk
boundaries/billing/currency/src/: main.rs
boundaries/billing/currency/src/cache/: cache_service.rs  mod.rs  test.rs
boundaries/billing/currency/src/domain/: mod.rs
boundaries/billing/currency/src/domain/currency_conversion/: entities.rs
boundaries/billing/currency/src/domain/exchange_rate/: entities.rs  mod.rs  value_objects.rs
boundaries/billing/currency/src/infrastructure/: mod.rs
boundaries/billing/currency/src/infrastructure/http/: handlers.rs  mod.rs  routes.rs  test.rs
boundaries/billing/currency/src/repository/: mod.rs
boundaries/billing/currency/src/repository/exchange_rate/: in_memory_repository.rs  mod.rs  redis_repository.rs  repository.rs
boundaries/billing/currency/src/usecases/: mod.rs
boundaries/billing/currency/src/usecases/currency_conversion/: README.md  converter.rs  mod.rs  traits.rs
boundaries/billing/currency/src/usecases/exchange_rate/: README.md  external_rate_provider.rs  fetcher.rs  mock_bloomberg_provider.rs  mock_yahoo_provider.rs  mod.rs  rate_fetcher_use_case.rs  tests.rs  traits.rs
boundaries/billing/currency/src/usecases/load_exchange_rates/: README.md
boundaries/billing/currency/src/usecases/load_exchange_rates_cron/: README.md  cron.rs  mod.rs
boundaries/billing/currency/tests/load/: currency_conversion_test.js
boundaries/billing/currency/usecases/discrepancies/: README.md
boundaries/billing/currency/usecases/load_exchange_rates/: README.md
boundaries/marketing/newsletter/: Cargo.toml  Makefile  README.md  buf.yaml
boundaries/marketing/newsletter/.cargo/: config.toml
boundaries/marketing/newsletter/.run/: Run newsletter.run.xml
boundaries/marketing/newsletter/ops/Makefile/: dev.mk  proto.mk
boundaries/marketing/newsletter/ops/proto/: proto-lock.json  rpc.buf.gen.yaml
boundaries/marketing/newsletter/src/: context.rs  domain.rs  handler.rs  main.rs  router.rs
boundaries/marketing/newsletter/src/domain/newsletter/: newsletter.rs
boundaries/marketing/newsletter/src/infrastructure/rpc/: mod.rs
boundaries/marketing/newsletter/templates/: forgot.md  new_release.md
boundaries/marketing/referral/: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
boundaries/marketing/referral/src/: __main__.py  _version.py
boundaries/marketing/referral/src/di/: core.py  di.py
boundaries/marketing/referral/src/di/config/: config.py
boundaries/marketing/referral/src/pkg/: event_bus.py
boundaries/notification/newsletter/: Cargo.toml  README.md
boundaries/notification/newsletter/src/: main.rs  router.rs
boundaries/shop/admin/: .gitignore  CONTRIBUTING.md  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
boundaries/shop/admin/admin/: asgi.py  json_log_middleware.py  otel_logging.py  settings.py  urls.py  views.py  wsgi.py
boundaries/shop/admin/docs/public/: Shop Admin API.yaml
boundaries/shop/admin/domain/goods/: admin.py  models.py
boundaries/shop/admin/fixtures/: good.json
boundaries/shop/admin/ops/Makefile/: dev.mk  docker.mk
boundaries/shop/admin/src/: made.py  manage.py  migration.py
boundaries/shop/admin/src/admin/: asgi.py  json_log_middleware.py  otel_logging.py  settings.py  urls.py  views.py  wsgi.py
boundaries/shop/admin/src/templates/: base.html
internal/boundaries/marketing/stats/: CMakeLists.txt
internal/boundaries/marketing/stats/src/: BUILD
internal/services/newsletter/: .gitignore  Cargo.toml  README.md
internal/services/newsletter/src/: context.rs  domain.rs  handler.rs  main.rs  postgres.rs  router.rs
internal/services/newsletter/src/migrations/: V1__initial.sql
internal/services/newsletter/templates/: welcome.md
internal/services/referral/: .gitignore  Makefile  README.md  __main__.py  main.py  pyproject.toml  requirements.txt
internal/services/referral/.run/: pytest in tests.run.xml  pytest.run.xml  referral.run.xml
internal/services/referral/application/use_referral/: README.md
internal/services/referral/di/: core.py  di.py
internal/services/referral/di/http/: server.py
internal/services/referral/di/logger/: logger.py
internal/services/referral/di/observability/: prometheus.py
internal/services/referral/di/opentelemetry/: opentelemetry.py
internal/services/referral/infrastructure/http/: routes.py  server.py
internal/services/referral/infrastructure/repository/: redis.py
internal/services/referral/pkg/: event_bus.py
internal/services/referral/src/: __main__.py
internal/services/referral/src/di/: core.py  di.py
internal/services/referral/src/pkg/: event_bus.py
internal/services/referral/tests/: pytest.ini
internal/services/referral/tests/unit/: test_exception.py  test_referral_uow.py  test_repository_redis.py
internal/services/referral/usecases/crud_referral/: crud.py
internal/services/referral/usecases/use_referral/: use.py
poc/ml-diff/ml/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  train.py
(+12458 files in other folders)
