[package]
name = "currency"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36.0"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
warp = "0.3.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
utoipa = "4.2.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
deadpool-redis =  { version = "0.18.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
thiserror = "1.0.64"
tokio-cron-scheduler = "0.13.0"
