[package]
name = "currency"
version = "0.1.0"
edition = "2021"

[dependencies]

# OpenTelemetry and Tracing
opentelemetry = { version = "0.27.1", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27.1", features = ["trace", "metrics", "rt-tokio"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.28.0"
spandoc = "0.2.2"

# gRPC with Tonic
tonic = { version = "0.12.3", features = ["tls"] }

# Redis and Serialization
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"] }
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

# Other
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36.0"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.85"
warp = "0.3.7"
utoipa = "5.3.0"
dotenvy = "0.15.7"
thiserror = "2.0.9"
tokio-cron-scheduler = "0.13.0"
chrono = "0.4.39"