cargo-features = []

[package]
name = "newsletter"
version = "0.1.0"
rust-version = "1.65"
authors = ["Login Victor <batazor111@gmail.com>"]
keywords = ["newsletter"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/shortlink-org/shortlink"

[dependencies]
futures = { version = "0.3.30", default-features = true, features = ["async-await"] }
hyper = { version = "0.14.30", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_derive = "1.0.210"
route-recognizer = "0.3.1"
bytes = "1.7.2"
async-trait = "0.1.83"
pretty_env_logger = "0.5"
tera = "1.20.0"
env_logger = "0.11.5"
dotenv = "0.15.0"
postgres = "0.19.9"
tokio-postgres = { version = "^0.7.12" }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
hyper-util = "0.1.9"
http-body-util = "0.1.2"
log = "0.4.22"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.10.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
