cargo-features = []

[package]
name = "newsletter"
version = "0.1.0"
rust-version = "1.65"
authors = ["Login Victor <batazor111@gmail.com>"]
keywords = ["newsletter"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/shortlink-org/shortlink"

[dependencies]
futures = { version = "0.3.31", default-features = true, features = ["async-await"] }
hyper = { version = "0.14.32", features = ["full"] }
tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_derive = "1.0.217"
route-recognizer = "0.3.1"
bytes = "1.9.0"
async-trait = "0.1.85"
pretty_env_logger = "0.5"
tera = "1.20.0"
env_logger = "0.11.6"
dotenv = "0.15.0"
postgres = "0.19.9"
tokio-postgres = { version = "^0.7.12" }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
hyper-util = "0.1.10"
http-body-util = "0.1.2"
log = "0.4.25"
bufbuild_registry_community_neoeinstein-prost = { version = "0.4.0-20240925012807-1610ffa05635.1", registry = "buf" }
bufbuild_registry_community_neoeinstein-tonic = { version = "0.4.1-20240925012807-1610ffa05635.1", registry = "buf" }
tonic = { version = "0.12.3", features = ["tls-roots"] }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.12.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
