[project]
name = "referral"
# Support Python 3.12+.
requires-python = ">=3.12"

[tool.ruff]
unsafe-fixes = true
line-length = 120
extend-exclude = [
  "src/domain/referral/v1/*.pyi",
  "src/domain/referral/v1/*_pb2.py",
  "src/domain/referral/v1/*_pb2_grpc.py",
  "tests/*",
]
exclude = [".venv", "*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi"]

[tool.ruff.lint]
select = [
  # TODO: enable all checks
  #  "ALL",
  "E", "W", # pycodestyle
  "F",      # pyflakes
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "N",      # pylint
  "PL",     # pylint
  "RUF",    # ruff
  "TID",    # tidy
  "I",      # isort
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
