[project]
name = "shop_admin"
description = "This service is responsible for the administration of the shop."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
  "django-ory-auth @ git+https://github.com/micro-company/django_ory_auth@master",
  'asgiref==3.8.1',
  'attrs==24.2.0',
  'certifi==2024.8.30',
  'charset-normalizer==3.4.0',
  'deprecated==1.2.15',
  'django==5.1.4',
  'django-admin-tailwind==0.0.31',
  'django-debug-toolbar==4.4.6',
  'django-environ==0.11.2',
  'django-health-check==3.18.3',
  'django-prometheus==2.3.1',
  'django-request-logging==0.7.5',
  'djangorestframework==3.15.2',
  'markdown',
  'django-filter',
  'drf-spectacular==0.28.0',
  'drf-yasg==1.21.8',
  'googleapis-common-protos==1.66.0',
  'grpcio==1.68.1',
  'idna==3.10',
  'importlib-metadata==8.5.0', # TODO: depencies of opentelemetry-api
  'inflection==0.5.1',
  'json-log-formatter==1.1',
  'jsonschema==4.23.0',
  'jsonschema-specifications==2024.10.1',
  'opentelemetry-api==1.29.0',
  'opentelemetry-exporter-otlp==1.28.2',
  'opentelemetry-exporter-otlp-proto-common==1.29.0',
  'opentelemetry-exporter-otlp-proto-grpc==1.28.2',
  'opentelemetry-exporter-otlp-proto-http==1.29.0',
  'opentelemetry-instrumentation==0.47b0',
  'opentelemetry-instrumentation-dbapi==0.47b0',
  'opentelemetry-instrumentation-django==0.47b0',
  'opentelemetry-instrumentation-logging==0.47b0',
  'opentelemetry-instrumentation-requests==0.47b0',
  'opentelemetry-instrumentation-sqlite3==0.47b0',
  'opentelemetry-instrumentation-wsgi==0.47b0',
  'opentelemetry-proto==1.29.0',
  'opentelemetry-sdk==1.29.0',
  'opentelemetry-semantic-conventions==0.47b0',
  'opentelemetry-util-http==0.47b0',
  'packaging==24.2',
  'pip==24.3.1',
  'prometheus-client==0.21.1',
  'protobuf==5.29.1', # TODO: depencies of opentelemetry-proto
  'pytz==2024.2',
  'pyyaml==6.0.2',
  'referencing==0.35.1',
  'requests==2.32.3',
  'rpds-py==0.22.3',
  'setuptools==75.6.0',
  'sqlparse==0.5.3',
  'typing-extensions==4.12.2',
  'uritemplate==4.1.1',
  'urllib3==2.2.3',
  'uv==0.5.8',
  'wrapt==1.17.0',
  'zipp==3.21.0',
  'psycopg2-binary==2.9.10',
  'redis',
  'django-redis'
]

[build-system]
requires = ["setuptools~=75.6"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "src._version.__version__"}

[tool.setuptools.package-data]
"src" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov-report term-missing --cov libname --fixtures tests"

[tool.ruff]
unsafe-fixes = true
line-length = 120
extend-exclude = [
  "src/domain/goods/migrations/*",
  "tests/*",
]
exclude = [".venv", "*_pb2.py", "*_pb2_grpc.py", "*_pb2.pyi"]

[tool.ruff.lint]
select = [
  # TODO: enable all checks
  #  "ALL",
  "E", "W", # pycodestyle
  "F",      # pyflakes
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "N",      # pylint
  "PL",     # pylint
  "RUF",    # ruff
  "TID",    # tidy
  "I",      # isort
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
