cargo-features = ["edition2021"]

[package]
name = "newsletter"
version = "0.1.0"
rust-version = "1.56"
authors = ["Login Victor <batazor111@gmail.com>"]
keywords = ["newsletter"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/batazor/shortlink"

[dependencies]
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
route-recognizer = "0.3"
bytes = "1.2"
async-trait = "0.1"
pretty_env_logger = "0.4"
tera = "1.17"
env_logger = "0.9.1"
dotenv = "0.15.0"
postgres = "0.19.4"
tokio-postgres = { version = "^0.7" }
refinery = { version = "0.8", features = ["tokio-postgres"] }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.2"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[target.'cfg(unix)'.dependencies]
rlimit = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
